--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ var _hmt = _hmt || [];
 	Although ZSL has achieved significant progress, there have a numbers of essential challenges. Recently, large-scale VLM-based ZSL method is popular, e.g., CLIP, it is an extension of the classical ZSL. <br><br>
 		   
          Dr. Shiming Chen has been focusing on tackling bottleneck challenges to promote ZSL (especially for the classical ZSL), covering fundamental questions of
-         <i>How to enhance the visual features by alleviating the cross-dataset bias between ImageNet and ZSL benchmarks? 
+         <i>How to enhance the visual features by alleviating the cross-dataset bias between pre-train dataset and ZSL benchmarks? 
 	 How to discover the intrinsic semantic knowledge by alleviating the visual-semantic domain shift problem? 
 	How to align the visual and semantic features in a common space by reducing the discrepancy between the heterogeneous visual-semantic representations?</i>
 	Specifically, his three representatives research projects are: <br> <br> 
@@ -195,7 +195,7 @@ var _hmt = _hmt || [];
 		<a href="https://arxiv.org/pdf/2404.14808">CVPR'24</a>
 	       </i>, etc.<br> <br> 
 		   
-       <strong>3. Developing the hierarchical semantic-visual adaptation framework for visual-semantic alignment.</strong> 
+       <strong>3. Developing the semantic-visual adaptation framework for visual-semantic alignment.</strong> 
 	Different to existing one-step adaptation method that on alignment the feature distributions between visual and semantic domains, 
 	this method utilizes a hierarchical adaptation to learn an intrinsic common space for semantic and visual feature representations
 	by adopting sequential structure adaptation and distribution adaptation. The papers of this project have been published in 
