--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@ var _hmt = _hmt || [];
 <!--     <div style="margin-top: 15px; overflow-y: scroll;"> -->
       <div style="height: 320px; overflow: auto;">
       <ul>
+      <li><span style="color:Red">2024.11</span>, Our paper on zero-shot learning is accepted to <strong><i>IEEE TNNLS</i></strong>, congrating to Bowen.</li>
       <li><span style="color:Red">2024.09</span>, Our paper on audio-visual zeroshot learning is accepted to <strong><i>IEEE TETCI</i></strong>, congrating to Yujie.</li>
        <li><span style="color:Red">2024.08</span>, Our paper on domain generalization is accepted to <strong><i>IEEE TMM</i></strong>, congrating to Guanglin.</li>
       <li><span style="color:Red">2024.07</span>, Our TWO papers on zero/few-shot learning is accepted to <strong><i>ACM MM'24</i></strong>, congrating to Shuhuang and Yunwei.</li>
@@ -491,39 +492,6 @@ var _hmt = _hmt || [];
 	<tr></tr>
 <tr></tr>
 
-<tr>	
-		<td width="206">
-		<img src="img/2024-TIP.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td><a href="https://ieeexplore.ieee.org/document/10558758" target="_blank">ECEA: Extensible Co-Existing Attention for Few-Shot Object Detection.</a>
-  		 <strong>
-		[<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=10558758">PDF</a>]
-		[<a href="https://arxiv.org/pdf/2309.08196">arXiv</a>]
-		 </strong>
-		<br>
-		<p >Zhimeng Xin, Tianxu Wu, <strong>Shiming Chen<sup>#</sup></strong>, Yixiong Zou, Ling Shao, Xinge You.</p>
-	 <p style="margin-top: -11px"> <i>IEEE Transactions on Image Processing (<strong> TIP </strong>), 33:5564-5576, 2024. <strong>
-		 (<span style="color:Burlywood">SCI, IF=10.6, CCF Rank-A</span>)</strong></p>
-		</td>
-	</tr>
-	<tr></tr>
-<tr></tr>
-
-<tr>	
-		<td width="206">
-		<img src="img/2024-SCIS.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td><a href="https://ieeexplore.ieee.org/document/9833533" target="_blank">Rethinking attribute localization for zero-shot learning.</a>
-			<strong>[<a href="https://link.springer.com/article/10.1007/s11432-023-4051-9">PDF</a>]</strong>
-			</strong>    
-			<br>
-		<p >Shuhuang Chen, <strong>Shiming Chen<sup>#</sup></strong>, Guo-sen Xie, Xiangbo Shu, Xinge You, Xuelong Li.</p>
-	       <p style="margin-top: -11px"><i>SCIENCE CHINA Information Sciences, 67, 172103 (2024). <strong> 
-		 (<span style="color:Burlywood">SCI, IF=8.8, CCF Rank-A</span>)</strong></p>
-	<tr></tr>
-    <tr></tr>
-    <tr></tr>
-
 
 	
 <tr>	
@@ -595,7 +563,56 @@ var _hmt = _hmt || [];
 	<tr></tr>
     <tr></tr>
     <tr></tr>
-    
+
+<tr>	
+		<td width="206">
+		<img src="img/2024-TIP.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td><a href="https://ieeexplore.ieee.org/document/10558758" target="_blank">ECEA: Extensible Co-Existing Attention for Few-Shot Object Detection.</a>
+  		 <strong>
+		[<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=10558758">PDF</a>]
+		[<a href="https://arxiv.org/pdf/2309.08196">arXiv</a>]
+		 </strong>
+		<br>
+		<p >Zhimeng Xin, Tianxu Wu, <strong>Shiming Chen<sup>#</sup></strong>, Yixiong Zou, Ling Shao, Xinge You.</p>
+	 <p style="margin-top: -11px"> <i>IEEE Transactions on Image Processing (<strong> TIP </strong>), 33:5564-5576, 2024. <strong>
+		 (<span style="color:Burlywood">SCI, IF=10.6, CCF Rank-A</span>)</strong></p>
+		</td>
+	</tr>
+	<tr></tr>
+<tr></tr>
+
+ <tr>	
+		<td width="206">
+		<img src="img/TNNLS-2024.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td><a href="" target="_blank">Visual-Semantic Graph Matching Net for Zero-Shot Learning.</a>
+<!-- 			<strong>
+				[<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9768177">PDF</a>]
+				[<a href="https://github.com/shiming-chen/GNDAN">Code</a>]
+			</strong> -->
+		<p >Bowen Duan, <strong>Shiming Chen<sup>#</sup></strong>, Yufei Guo, Guo-Sen Xie, Weiping Ding and Yisong Wang.</p>
+	       <p style="margin-top: -11px"><i>IEEE Transactions on Neural Networks and Learning Systems (<strong> TNNLS</strong>), In press, 2024. <strong>
+		 (<span style="color:Burlywood">SCI, IF=14.255, CCF Rank-B</span>)</strong></p>
+	<tr></tr>
+    <tr></tr>
+    <tr></tr>
+
+<tr>	
+		<td width="206">
+		<img src="img/2024-SCIS.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td><a href="https://ieeexplore.ieee.org/document/9833533" target="_blank">Rethinking attribute localization for zero-shot learning.</a>
+			<strong>[<a href="https://link.springer.com/article/10.1007/s11432-023-4051-9">PDF</a>]</strong>
+			</strong>    
+			<br>
+		<p >Shuhuang Chen, <strong>Shiming Chen<sup>#</sup></strong>, Guo-sen Xie, Xiangbo Shu, Xinge You, Xuelong Li.</p>
+	       <p style="margin-top: -11px"><i>SCIENCE CHINA Information Sciences, 67, 172103 (2024). <strong> 
+		 (<span style="color:Burlywood">SCI, IF=8.8, CCF Rank-A</span>)</strong></p>
+	<tr></tr>
+    <tr></tr>
+    <tr></tr>
+			
 	
 <!--     <tr>
 	
