--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ var _hmt = _hmt || [];
 </table>-->	      
 <table id="tbPublications" width="100%">
 <tbody>
-<span>(*:Co-First Author; #:Corresponding Author) </span>
+<span>(<strong>*:Co-First Author; #:Corresponding Author</strong>) </span>
 <h3 style="color: red">Survey Papers </h3>
 
 <!-- <tr>
