--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ var _hmt = _hmt || [];
 					<h1>Shiming Chen &nbsp 陈使明 </h1><h1>
 				</h1></div>
 
-				<h3> Postdoctoral Research Fellow </h3>
+<!-- 				<h3> Postdoctoral Research Fellow </h3> -->
 				<p>
 <!-- 					1037 Luoyu Road,<br>
 					National Anti-counterfeit Engineering Research Center,<br>
