--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@ var _hmt = _hmt || [];
 <!--     <div style="margin-top: 15px; overflow-y: scroll;"> -->
       <div style="height: 320px; overflow: auto;">
       <ul>
+      <li><span style="color:Red">2024.11</span>, I received 2024 CSIG Excellent Doctoral Dissertation Award Honorable Mention Award.</li>
       <li><span style="color:Red">2024.11</span>, Our paper on zero-shot learning is accepted to <strong><i>IEEE TNNLS</i></strong>, congrating to Bowen.</li>
       <li><span style="color:Red">2024.09</span>, Our paper on audio-visual zeroshot learning is accepted to <strong><i>IEEE TETCI</i></strong>, congrating to Yujie.</li>
        <li><span style="color:Red">2024.08</span>, Our paper on domain generalization is accepted to <strong><i>IEEE TMM</i></strong>, congrating to Guanglin.</li>
@@ -217,7 +218,7 @@ var _hmt = _hmt || [];
      
 <tr><tr><tr><tr>
 <div style="margin-top: 10px"></div>
-    <h2>Latest Publications <a href="https://scholar.google.com/citations?hl=en&user=botczdcAAAAJ">(Google Scholar)</a> </h2>
+    <h2>Latest Publications <a href="https://scholar.google.com/citations?hl=en&user=botczdcAAAAJ">(Full List)</a> </h2>
 <!--<p><a href="https://scholar.google.com/citations?hl=en&user=botczdcAAAAJ">My Google Scholar</a></p>-->
 	 
 <!--<table id="tbPublications" width="100%">
@@ -652,6 +653,7 @@ var _hmt = _hmt || [];
 	  
     <h2><strong>Awards</strong></h2>
    <div>
+	<li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2024.11</span>, <strong>2024 CSIG Excellent Doctoral Dissertation Award Honorable Mention Award</strong>.</li>
 	<li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2022.08</span>, <strong>Huawei Academic Star</strong>.</li>
 	<li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.10</span>, <strong> China National Scholarship</strong>.</li>
     </div>  
