--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ var _hmt = _hmt || [];
 <!-- 	       <span>I am the <a href="http://valser.org/article-634-1.html">AC</a> of <strong>VALSE</strong>.</span><br> -->
 <!-- 	  <span style="color:Red"><strong>Open Position:</strong> If you are interested in our researches (open-world learning with limited data, e.g., zero/few-shot learning, OOD, OSR) and 
 	    would like to work with Prof. <a href="https://scholar.google.com/citations?user=zvaeYnUAAAAJ&hl=zh-CN">Fahad Shahbaz Khan</a>, Prof. <a href="https://salman-h-khan.github.io/">Salman Khan</a>  and me as an intern/visiting student in the MBZUAI,
-	    feel free drop me email with your CV. </span> -->g
+	    feel free drop me email with your CV. </span> -->
     </div>
 	 
 
