--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@ var _hmt = _hmt || [];
 <!--     <div style="margin-top: 15px; overflow-y: scroll;"> -->
       <div style="height: 320px; overflow: auto;">
       <ul>
-      <li><span style="color:Red">2024.11</span>, I received 2024 CSIG Excellent Doctoral Dissertation Award Honorable Mention Award.</li>
+      <li><span style="color:Red">2024.12</span>, Our TWO papers on zero/few-shot learning is accepted to <strong><i>AAAI'25</i></strong>, congrating to Wenjin and Yunwei.</li>
+      <li><span style="color:Red">2024.11</span>, I received <strong>2024 CSIG Excellent Doctoral Dissertation Award Honorable Mention Award </strong>.</li>
       <li><span style="color:Red">2024.11</span>, Our paper on zero-shot learning is accepted to <strong><i>IEEE TNNLS</i></strong>, congrating to Bowen.</li>
       <li><span style="color:Red">2024.09</span>, Our paper on audio-visual zeroshot learning is accepted to <strong><i>IEEE TETCI</i></strong>, congrating to Yujie.</li>
        <li><span style="color:Red">2024.08</span>, Our paper on domain generalization is accepted to <strong><i>IEEE TMM</i></strong>, congrating to Guanglin.</li>
