--- a/index.html
+++ b/index.html
@@ -248,9 +248,9 @@ var _hmt = _hmt || [];
 <table id="tbPublications" width="100%">
 <tbody>
 <span>(<strong>*:Co-First Author; #:Corresponding Author</strong>) </span>
-<h3 style="color: red">Survey Papers </h3>
+<!--<h3 style="color: red">Survey Papers </h3>
 
-<!-- <tr>
+ <tr>
 		<td width="206">
 		<img src="img/2024-TKDE-causality-survey.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
@@ -261,7 +261,7 @@ var _hmt = _hmt || [];
 		</td>
 	</tr>
 	<tr></tr>
-	<tr></tr> -->
+	<tr></tr> 
 
 	
 <tr>
@@ -278,7 +278,8 @@ var _hmt = _hmt || [];
 	<tr></tr>
 	<tr></tr>
 </tbody>
-</table>
+</table>-->
+	
 
 <table id="tbPublications" width="100%">
 <tbody>	
