--- a/index.html
+++ b/index.html
@@ -591,11 +591,11 @@ var _hmt = _hmt || [];
 		<td width="206">
 		<img src="img/TNNLS-2024.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="" target="_blank">Visual-Semantic Graph Matching Net for Zero-Shot Learning.</a>
-<!-- 			<strong>
-				[<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9768177">PDF</a>]
-				[<a href="https://github.com/shiming-chen/GNDAN">Code</a>]
-			</strong> -->
+		<td><a href="https://ieeexplore.ieee.org/document/10777919" target="_blank">Visual-Semantic Graph Matching Net for Zero-Shot Learning.</a>
+			<strong>
+				[<a href="https://ieeexplore.ieee.org/document/10777919">PDF</a>]
+				[<a href="https://arxiv.org/pdf/2411.11351">arXiv</a>]
+			</strong> 
 		<p >Bowen Duan, <strong>Shiming Chen<sup>#</sup></strong>, Yufei Guo, Guo-Sen Xie, Weiping Ding and Yisong Wang.</p>
 	       <p style="margin-top: -11px"><i>IEEE Transactions on Neural Networks and Learning Systems (<strong> TNNLS</strong>), In press, 2024. <strong>
 		 (<span style="color:Burlywood">SCI, IF=14.255, CCF Rank-B</span>)</strong></p>
