--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@ var _hmt = _hmt || [];
 <!--     <div style="margin-top: 15px; overflow-y: scroll;"> -->
       <div style="height: 320px; overflow: auto;">
       <ul>
+      <li><span style="color:Red">2025.02</span>, Our paper on zero-shot learning is accepted to <strong><i>IJCV</i></strong>.</li>
+      <li><span style="color:Red">2025.02</span>, Our paper on zero-shot learning is accepted to <strong><i>ICLR'25</i></strong>, congrating to Zihan.</li>
       <li><span style="color:Red">2024.12</span>, Our TWO papers on zero/few-shot learning is accepted to <strong><i>AAAI'25</i></strong>, congrating to Wenjin and Yunwei.</li>
       <li><span style="color:Red">2024.11</span>, I received <strong>2024 CSIG Excellent Doctoral Dissertation Award Honorable Mention Award </strong>.</li>
       <li><span style="color:Red">2024.11</span>, Our paper on zero-shot learning is accepted to <strong><i>IEEE TNNLS</i></strong>, congrating to Bowen.</li>
@@ -477,6 +479,25 @@ var _hmt = _hmt || [];
 <tbody>	
 <h3 style="color: red">Journal Papers</h3>
 
+
+<tr>	
+		<td width="206">
+		<img src="img/IJCV24-VIFR.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td><a href="" target="_blank">Semantics-Conditioned Generative Zero-Shot Learning via Feature Refinement.</a>
+		 <strong>
+		[<a href="https://github.com/shiming-chen/ViFR">Code</a>]
+		 </strong>
+		<br>
+		<p ><strong>Shiming Chen</strong>, Ziming Hong, Xinge You,Ling Shao.</p>
+	 <p style="margin-top: -11px"> <i>International Journal of Computer Vision (<strong> IJCV </strong>), In press, 2025. <strong>
+		 (<span style="color:Burlywood">SCI, IF=14.5, CCF Rank-A</span>)</strong></p>
+		</td>
+	</tr>
+	<tr></tr>
+<tr></tr>
+
+	
 <tr>	
 		<td width="206">
 		<img src="img/TransZero-TPAMI.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
