--- a/index.html
+++ b/index.html
@@ -486,6 +486,7 @@ var _hmt = _hmt || [];
 		</td>		
 		<td><a href="" target="_blank">Semantics-Conditioned Generative Zero-Shot Learning via Feature Refinement.</a>
 		 <strong>
+		[<a href="https://link.springer.com/article/10.1007/s11263-025-02394-7">PDF</a>]
 		[<a href="https://github.com/shiming-chen/ViFR">Code</a>]
 		 </strong>
 		<br>
