--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@ var _hmt = _hmt || [];
 		<td width="206">
 		<img src="img/IJCV24-VIFR.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="" target="_blank">Semantics-Conditioned Generative Zero-Shot Learning via Feature Refinement.</a>
+		<td><a href="https://link.springer.com/article/10.1007/s11263-025-02394-7" target="_blank">Semantics-Conditioned Generative Zero-Shot Learning via Feature Refinement.</a>
 		 <strong>
 		[<a href="https://link.springer.com/article/10.1007/s11263-025-02394-7">PDF</a>]
 		[<a href="https://github.com/shiming-chen/ViFR">Code</a>]
