--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@ var _hmt = _hmt || [];
 <!--     <div style="margin-top: 15px; overflow-y: scroll;"> -->
       <div style="height: 320px; overflow: auto;">
       <ul>
+      <li><span style="color:Red">2025.04</span>, Our work (GenZSL) is accepted to <strong><i>ICML'25</i></strong>.</li>
       <li><span style="color:Red">2025.02</span>, Our paper on zero-shot learning is accepted to <strong><i>IJCV</i></strong>.</li>
       <li><span style="color:Red">2025.02</span>, Our paper on zero-shot learning is accepted to <strong><i>ICLR'25</i></strong>, congrating to Zihan.</li>
       <li><span style="color:Red">2024.12</span>, Our TWO papers on zero/few-shot learning is accepted to <strong><i>AAAI'25</i></strong>, congrating to Wenjin and Yunwei.</li>
@@ -287,6 +288,22 @@ var _hmt = _hmt || [];
 <tbody>	
 <h3 style="color: red">Conference Papers </h3>	
 
+<tr>
+	
+		<td width="206">
+		<img src="img/ICML2025.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="" target="_blank"> GenZSL: Generative Zero-Shot Learning Via Inductive Variational Autoencoder.</a>
+<!-- 			<strong>[<a href="https://openaccess.thecvf.com/content/CVPR2024/html/Chen_Progressive_Semantic-Guided_Vision_Transformer_for_Zero-Shot_Learning_CVPR_2024_paper.html">PDF</a>]
+				[<a href="https://arxiv.org/abs/2404.07713">arXiv</a>]
+				[<a href="https://github.com/shiming-chen/ZSLViT">Code</a>]
+			</strong> -->
+		 <p ><strong>Shiming Chen</strong>, Dingjie Fu, Salman Khan, Fahad Shahbaz Khan.</p>
+       <p style="margin-top: -11px"><i>International Conference on Machine Learning (<strong> ICML </strong>), 2025. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
+		</td>
+	</tr>
+	<tr></tr>
+	<tr></tr>
 	
 <tr>
 	
