--- a/index.html
+++ b/index.html
@@ -186,7 +186,8 @@ var _hmt = _hmt || [];
 	the generator to synthesize realistic visual features for unseen classes. The papers of this project have been published in 
 	<i> <a href="https://openaccess.thecvf.com/content/ICCV2021/html/Chen_FREE_Feature_Refinement_for_Generalized_Zero-Shot_Learning_ICCV_2021_paper.html" target="_blank"> ICCV'21</a>, 
 	<a href="https://www.ijcai.org/proceedings/2022/134" target="_blank"> IJCAI'22</a>, 
-	<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9768177" target="_blank"> IEEE TNNLS'22</a>,  
+	<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9768177" target="_blank"> IEEE TNNLS'24</a>,
+	<a href="https://link.springer.com/article/10.1007/s11263-025-02394-7" target="_blank"> IEEE IJCV'25</a>,  
 	 etc.<br> <br> 
 		   
         <strong>2. Developing the effective ZSL algorithms to tackle the visual-semantic domain shift problem. </strong> 
@@ -210,6 +211,15 @@ var _hmt = _hmt || [];
 		<a href="https://proceedings.neurips.cc/paper/2021/hash/8b0d268963dd0cfb808aac48a549829f-Abstract.html" target="_blank"> NeurIPS'21</a>,
 		<a href="https://arxiv.org/abs/2404.07713">CVPR'24</a>
 	</i>.
+		
+	<strong>4. Developing new algorithms for bridging the gap of classical ZSL and VLM-based ZSL.</strong> 
+	Classical ZSL methods show strong ability to align visual and semantic information, while VLM-based ZSL (e.g., CLIP) achieves strong ZSL generalization with large-scale data for training.
+	Accordingly, developing new algorithms for bridging the gap of classical ZSL and VLM-based ZSL is a potential research direction. For example, we develop a new induction-based generative model 
+	for ZSL, which shows great potential than the imagination-based methods.
+	<i>
+		<a href="" target="_blank"> ICML'25</a>.
+	</i>.
+		
 	</span> <br> <br> 
 	<span></span><br>
 <!-- 	  <span>I come from Meizhou, Guangdong, where is known as “<i>Hakka capital</i>” and “<i> City of Football </i>”.<br> -->
