--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ var _hmt = _hmt || [];
      
 <tr><tr><tr><tr>
 <div style="margin-top: 10px"></div>
-    <h2>Latest Publications <a href="https://scholar.google.com/citations?hl=en&user=botczdcAAAAJ">(Full List)</a> </h2>
+    <h2>Latest Publications <a href="https://scholar.google.com/citations?hl=en&user=botczdcAAAAJ">(Refer to Full List at Google Scholar)</a> </h2>
 <!--<p><a href="https://scholar.google.com/citations?hl=en&user=botczdcAAAAJ">My Google Scholar</a></p>-->
 	 
 <!--<table id="tbPublications" width="100%">
