--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@ var _hmt = _hmt || [];
 <!--     <div style="margin-top: 15px; overflow-y: scroll;"> -->
       <div style="height: 320px; overflow: auto;">
       <ul>
+      <li><span style="color:Red">2025.05</span>, I was selected as ICLR'25 <strong><i>Notable Reviewer</i></strong>.</li>
       <li><span style="color:Red">2025.04</span>, Our work (GenZSL) is accepted to <strong><i>ICML'25</i></strong>.</li>
       <li><span style="color:Red">2025.02</span>, Our paper on zero-shot learning is accepted to <strong><i>IJCV</i></strong>.</li>
       <li><span style="color:Red">2025.02</span>, Our paper on zero-shot learning is accepted to <strong><i>ICLR'25</i></strong>, congrating to Zihan.</li>
@@ -708,6 +709,7 @@ var _hmt = _hmt || [];
 	<li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2024.11</span>, <strong>2024 CSIG Excellent Doctoral Dissertation Award Honorable Mention Award</strong>.</li>
 	<li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.08</span>, <strong>Huawei Academic Star</strong>.</li>
 	<li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.10</span>, <strong> China National Scholarship</strong>.</li>
+	<li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2025.5</span>, <strong> ICLR'25 Notable Reviewer</strong>.</li>
     </div>  
    
     <h2>Work Experience</h2>
@@ -745,7 +747,7 @@ var _hmt = _hmt || [];
 	TPAMI, IJCV, TIP, TNNLS, TEC, TCYB, TSMCA, TITS, TII, TMM, TASE, TIV, etc.<br>
 	
 	<strong>Conference PC/Reviewers:</strong> 
-	ICLR'23-24, NeurIPS'23, CVPR'22-24, ICCV'21-23, ECCV'22-24, AAAI'22-24,  IJCAI'21-23, ACM MM'21.
+	ICLR'23-25, NeurIPS'23-25, CVPR'22-25, ICCV'21-25, ECCV'22-24, AAAI'22-25,  IJCAI'21-23, ACM MM'21-25.
     </div>
 	
 	 
