--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ var _hmt = _hmt || [];
 <!--     <div style="margin-top: 15px; overflow-y: scroll;"> -->
       <div style="height: 320px; overflow: auto;">
       <ul>
-      <li><span style="color:Red">2025.05</span>, I was selected as a ICLR'25 <strong><i>Notable Reviewer</i></strong>.</li>
+      <li><span style="color:Red">2025.05</span>, I was selected as an <strong><i>ICLR'25 Notable Reviewer</i></strong>.</li>
       <li><span style="color:Red">2025.04</span>, Our work (GenZSL) is accepted to <strong><i>ICML'25</i></strong>.</li>
       <li><span style="color:Red">2025.02</span>, Our paper on zero-shot learning is accepted to <strong><i>IJCV</i></strong>.</li>
       <li><span style="color:Red">2025.02</span>, Our paper on zero-shot learning is accepted to <strong><i>ICLR'25</i></strong>, congrating to Zihan.</li>
