--- a/index.html
+++ b/index.html
@@ -305,10 +305,10 @@ var _hmt = _hmt || [];
 		<img src="img/ICML2025.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="" target="_blank"> GenZSL: Generative Zero-Shot Learning Via Inductive Variational Autoencoder.</a>
-<!-- 			<strong>[<a href="https://openaccess.thecvf.com/content/CVPR2024/html/Chen_Progressive_Semantic-Guided_Vision_Transformer_for_Zero-Shot_Learning_CVPR_2024_paper.html">PDF</a>]
-				[<a href="https://arxiv.org/abs/2404.07713">arXiv</a>]
-				[<a href="https://github.com/shiming-chen/ZSLViT">Code</a>]
-			</strong> -->
+			<strong>
+				[<a href="https://arxiv.org/pdf/2505.11882">arXiv</a>]
+				[<a href="https://github.com/shiming-chen/GenZSL">Code</a>]
+			</strong> 
 		 <p ><strong>Shiming Chen</strong>, Dingjie Fu, Salman Khan, Fahad Shahbaz Khan.</p>
        <p style="margin-top: -11px"><i>International Conference on Machine Learning (<strong> ICML </strong>), 2025. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
 		</td>
