--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@ var _hmt = _hmt || [];
 		 </strong>
 		<br>
 		<p ><strong>Shiming Chen</strong>, Ziming Hong, Xinge You,Ling Shao.</p>
-	 <p style="margin-top: -11px"> <i>International Journal of Computer Vision (<strong> IJCV </strong>), In press, 2025. <strong>
+	 <p style="margin-top: -11px"> <i>International Journal of Computer Vision (<strong> IJCV </strong>), 133:4504–4521, 2025. <strong>
 		 (<span style="color:Burlywood">SCI, IF=14.5, CCF Rank-A</span>)</strong></p>
 		</td>
 	</tr>
