--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@ var _hmt = _hmt || [];
 <!--     <div style="margin-top: 15px; overflow-y: scroll;"> -->
       <div style="height: 320px; overflow: auto;">
       <ul>
+      <li><span style="color:Red">2025.05</span>, Our work (LaZSL) is accepted to <strong><i>ICCV'25</i></strong>.</li>
       <li><span style="color:Red">2025.05</span>, I was selected as an <strong><i>ICLR'25 Notable Reviewer</i></strong>.</li>
       <li><span style="color:Red">2025.04</span>, Our work (GenZSL) is accepted to <strong><i>ICML'25</i></strong>.</li>
       <li><span style="color:Red">2025.02</span>, Our paper on zero-shot learning is accepted to <strong><i>IJCV</i></strong>.</li>
@@ -218,7 +219,8 @@ var _hmt = _hmt || [];
 	Accordingly, developing new algorithms for bridging the gap of classical ZSL and VLM-based ZSL is a potential research direction. For example, we develop a new induction-based generative model 
 	for ZSL, which shows great potential than the imagination-based methods.
 	<i>
-		<a href="" target="_blank"> ICML'25</a>.
+		<a href="https://arxiv.org/pdf/2505.11882" target="_blank"> ICML'25</a>.
+		<a href="https://arxiv.org/pdf/2506.23822" target="_blank"> ICCV'25</a>.
 	</i>.
 		
 	</span> <br> <br> 
@@ -299,6 +301,26 @@ var _hmt = _hmt || [];
 <tbody>	
 <h3 style="color: red">Conference Papers </h3>	
 
+
+
+<tr>
+	
+		<td width="206">
+		<img src="img/ICCV25.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="" target="_blank"> Interpretable Zero-Shot Learning with Locally-Aligned Vision-Language Model.</a>
+			<strong>
+				[<a href="https://arxiv.org/pdf/2506.23822">arXiv</a>]
+				[<a href="https://github.com/shiming-chen/LaZSL">Code</a>]
+			</strong> 
+		 <p ><strong>Shiming Chen</strong>, Bowen Duan, Salman Khan, Fahad Shahbaz Khan.</p>
+       <p style="margin-top: -11px"><i>IEEE International Conference on Computer Vision (<strong> ICCV </strong>), 2025. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
+		</td>
+	</tr>
+	<tr></tr>
+	<tr></tr>
+
+	
 <tr>
 	
 		<td width="206">
