--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@ var _hmt = _hmt || [];
 <!--     <div style="margin-top: 15px; overflow-y: scroll;"> -->
       <div style="height: 320px; overflow: auto;">
       <ul>
+      <li><span style="color:Red">2025.07</span>, Our papers is accepted to <strong><i>TNNLS</i></strong> and <strong><i>TCSVT</i></strong>, congrating to Shuhuang and Yutang.</li>
       <li><span style="color:Red">2025.06</span>, Our work (LaZSL) is accepted to <strong><i>ICCV'25</i></strong>.</li>
       <li><span style="color:Red">2025.05</span>, I was selected as an <strong><i>ICLR'25 Notable Reviewer</i></strong>.</li>
       <li><span style="color:Red">2025.04</span>, Our work (GenZSL) is accepted to <strong><i>ICML'25</i></strong>.</li>
